--- a/index.html
+++ b/index.html
@@ -97,7 +97,8 @@
 			//holds data store for dojo data grid (report)
 			var roomsLayerURL = "https://services1.arcgis.com/DwLTn0u9VBSZvUPe/arcgis/rest/services/envspace/FeatureServer/0";
 			var roomsUpdateLayerURL = "https://services1.arcgis.com/DwLTn0u9VBSZvUPe/arcgis/rest/services/envspace_edit/FeatureServer/1";
-			var researcherSpaceURL = "http://services1.arcgis.com/DwLTn0u9VBSZvUPe/arcgis/rest/services/envspace/FeatureServer/2"; 
+			var researcherSpaceURL = "http://services1.arcgis.com/DwLTn0u9VBSZvUPe/arcgis/rest/services/envspace/FeatureServer/2";
+			var researchersURL = "http://services1.arcgis.com/DwLTn0u9VBSZvUPe/arcgis/rest/services/envspace/FeatureServer/1"; 
 
 			//show map on load
 			dojo.addOnLoad(init);
@@ -138,6 +139,9 @@
 			<button data-dojo-type="dojox.mobile.Button" onclick="printMap()" style="position:absolute; right:15px; top:305px; width:91px; z-Index:1;">
 				Print Map
 			</button>
+			<button data-dojo-type="dojox.mobile.Button" onclick="showResearchers()" style="position:absolute; right:15px; top:345px; width:141px; z-Index:1;">
+				Show Researchers
+			</button>
 
 			<div style="position:absolute; left:20px; bottom:230px; z-Index:1; height:25%; width: 200px; overflow:auto" title="Legend">
 				<div style="overflow:auto">
@@ -164,6 +168,30 @@
 
 		<div id="editDialog" data-dojo-type="dojox.mobile.SimpleDialog" data-dojo-id="editDialog" title="Edit Feature" style="width:500px;height:300px" data-dojo-props="closeButton:true">
 			
+		</div>
+		
+		<div id="researcherDialog" data-dojo-type="dojox.mobile.SimpleDialog" data-dojo-id="researcherDialog" title="Researchers" style="width:250px;height:200px" data-dojo-props="closeButton:true">
+			
+			
+			
+			<select id="researcherList" size="7" style="width:100px">
+					
+			</select>
+			
+			
+			
+			<select id="researcherSpaces" size="7" style="width:100px" onChange="dojo.byId('showSpacesBtn').disabled = false;">
+					
+			</select>
+			<div>
+			<button data-dojo-type="dojox.mobile.Button" onclick="listResearcherSpaces(dojo.byId('researcherList').value)">
+				List Spaces
+			</button>
+			
+			<button id="showSpacesBtn" data-dojo-type="dojox.mobile.Button" onclick="findRoomBySpaceID(dojo.byId('researcherSpaces').value);hide('researcherDialog');">
+				Show Space
+			</button>
+			</div>
 		</div>
 
 		<div id="roomInfoDialog" data-dojo-type="dojox/mobile/SimpleDialog" data-dojo-id="roomInfoDialog" title="Room Info" style="width:500px;height:300px" data-dojo-props="closeButton:true">
