Support selection of subsets

--- a/index.html
+++ b/index.html
@@ -147,6 +147,12 @@
 			<button data-dojo-type="dojox.mobile.Button" onclick="showOccupants()" style="position:absolute; right:15px; top:385px; width:141px; z-Index:1;">
 				Show Occupants
 			</button>
+			<button data-dojo-type="dojox.mobile.Button" onclick="showSelectedRows()" style="position:absolute; right:15px; top:425px; width:141px; z-Index:1;">
+				Filter by Report
+			</button>
+			<button data-dojo-type="dojox.mobile.Button" onclick="changeFloor(dojo.byId('floorButton').value)" style="position:absolute; right:15px; top:465px; width:141px; z-Index:1;">
+				Clear Filter
+			</button>
 
 			<div style="position:absolute; left:20px; bottom:230px; z-Index:1; height:25%; width: 200px; overflow:auto" title="Legend">
 				<div style="overflow:auto">
